Fixed css spacing

--- a/packages/commonwealth/client/scripts/views/pages/discussions/ThreadCard/AuthorAndPublishInfo/AuthorAndPublishInfo.scss
+++ b/packages/commonwealth/client/scripts/views/pages/discussions/ThreadCard/AuthorAndPublishInfo/AuthorAndPublishInfo.scss
@@ -62,6 +62,8 @@
 
     .CWSelectList {
       min-width: 202px;
+      margin-left: -20px;
+      margin-right: -10px;
 
       .SelectList:not(:focus):not(:focus-within) {
         border-color: transparent !important;
